# vehicle-homologation-system

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  env.example  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 1d1ae98e7959_initial_migration_with_vehicle_table.py
app/: main.py
app/api/v1/: vehicle.py
app/core/: config.py  constants.py
app/db/: session.py
app/models/: vehicle.py
app/repositories/: __init__.py  base.py  vector_repository.py  vehicle_repository.py
app/schemas/: vehicle.py
app/services/: embedding_service.py  llm_service.py  normalization_service.py  vector_service.py  vehicle_service.py
scripts/populate_db/: Dockerfile  README.md  populate.py  requirements.txt  vehiculos_seguros.csv  vehiculos_socios.csv
